-
Bug
-
Resolution: Done
-
P4: Low
-
5.2.1
-
None
-
win32-msvc2010
-
b7d86139772c3ce662ea7f092658699d351bbb1d
configure.exe -help says:
-no-vcproj ......... Do not generate VC++ .vcproj files.
* -vcproj ............ Generate VC++ .vcproj files, only if platform
"win32-msvc.net"
This option has always been very useful to us while building Qt 4 on Visual C++ (for both Visual Studio 2008 and Visual Studio 2010). However, it seems that the option does not have any effect anymore, with Qt 5.2.1. As I tested after unzipping qt-everywhere-opensource-src-5.2.1.zip
Is "configure.exe -help" outdated for Qt 5, or has this -vcproj feature accidentally been removed?
| For Gerrit Dashboard: QTBUG-36955 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 87859,3 | nuke -process/-fully-process/-dont-process options | dev | qt/qtbase | Status: MERGED | +2 | 0 |